--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "node ./scripts/generate-sitemap.js && tsc && vite build",
     "preview": "vite preview",
     "gen-post": "node ./scripts/generate-article.js"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4"
   },
   "devDependencies": {
+    "@google/genai": "^1.33.0",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
